# ennoia

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  package.json
.github/workflows/: ci.yml
.helloagents/: CHANGELOG.md  INDEX.md  context.md
.helloagents/archive/: _index.md
.helloagents/modules/: _index.md  extension-runtime.md  web-shell.md  web.md  workspace-docs.md
.helloagents/plan/202604151312_platform-first-full-rollout/: proposal.md  tasks.md
.helloagents/plan/202604221537_pipeline-extension-core-split/: proposal.md  tasks.md
.helloagents/plan/202604231535_wasm-action-interface-scheduler/: .status.json  proposal.md  tasks.md
assets/: db.sql
assets/migrations/: 0000_schema_migrations.sql  0001_ennoia_core.sql  0002_ui_runtime.sql  0003_auth.sql  0004_single_operator_conversations.sql  0005_frontend_logs.sql
assets/templates/config/: ennoia.toml  server.toml  ui.toml
assets/templates/policies/: memory.toml
builtins/extensions/conversation/: extension.toml
builtins/extensions/memory/: extension.toml
builtins/extensions/memory/plugins/memory-service/: Cargo.toml
builtins/extensions/memory/plugins/memory-service/src/: conversations.rs  lib.rs  model.rs  schema.rs  sqlite.rs
builtins/extensions/observatory/: ennoia.extension.toml  extension.toml
builtins/extensions/openai/: ennoia.extension.toml  extension.toml
builtins/extensions/session/: extension.toml
builtins/extensions/workflow/: extension.toml
builtins/extensions/workflow/plugins/workflow-service/: Cargo.toml
builtins/extensions/workflow/plugins/workflow-service/src/: lib.rs  pipeline.rs
builtins/extensions/workflow/plugins/workflow-service/src/orchestrator/: mod.rs  model.rs  service.rs
builtins/extensions/workflow/plugins/workflow-service/src/runtime/: engine.rs  gates.rs  mod.rs  model.rs  sqlite_store.rs  stage.rs
builtins/skills/frontend-design/: README.md  skill.toml
builtins/skills/implementation/: README.md  skill.toml
builtins/skills/task-planning/: README.md  skill.toml
crates/assets/: Cargo.toml  build.rs
crates/assets/src/: lib.rs
crates/auth/: Cargo.toml
crates/auth/src/: hashing.rs  lib.rs  service.rs  sqlite_api_key.rs  sqlite_session.rs  sqlite_user.rs  tokens.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/templates/config/: server.toml
crates/cli/templates/config/agents/: coder.toml
crates/cli/templates/global/extensions/observatory/: manifest.toml
crates/config/: Cargo.toml
crates/config/src/: lib.rs  sqlite.rs
crates/contract/: Cargo.toml
crates/contract/src/: behavior.rs  lib.rs  memory.rs
crates/error-utils/: Cargo.toml
crates/error-utils/src/: lib.rs
crates/extension-host/: Cargo.toml
crates/extension-host/src/: lib.rs  registry.rs  worker.rs
crates/kernel/: Cargo.toml
crates/kernel/src/: auth.rs  config.rs  context.rs  decision.rs  domain.rs  extension.rs  gate.rs  lib.rs  memory.rs  overview.rs  permission.rs  policy.rs  runtime.rs  scheduler.rs  server_settings.rs  signals.rs  stage.rs  system_config.rs  ui.rs
crates/memory/: Cargo.toml
crates/memory/src/: error.rs  lib.rs  model.rs  requests.rs  service.rs  sqlite.rs  store.rs
crates/observability/: Cargo.toml
crates/observability/src/: lib.rs
crates/orchestrator/: Cargo.toml
crates/orchestrator/src/: lib.rs  model.rs  service.rs
crates/paths/: Cargo.toml
crates/paths/src/: lib.rs
crates/policy/: Cargo.toml
crates/policy/src/: glob.rs  lib.rs  memory.rs  runtime.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: engine.rs  error.rs  gate.rs  gates.rs  lib.rs  model.rs  sqlite_store.rs  stage.rs  store.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: error.rs  handlers.rs  lib.rs  model.rs  service.rs  sqlite_store.rs  store.rs  worker.rs
crates/server/: Cargo.toml
crates/server/src/: app.rs  db.rs  lib.rs  routes.rs  system_config.rs
crates/server/src/agent_permissions/: mod.rs
crates/server/src/agent_permissions/sqlite/: mod.rs  query.rs  schema.rs
crates/server/src/db/: jobs.rs  logs.rs  migration.rs  mod.rs
crates/server/src/event_bus/: mod.rs  sqlite.rs
crates/server/src/middleware/: auth.rs  body_limit.rs  cors.rs  logging.rs  mod.rs  rate_limit.rs  request_context.rs  timeout.rs
crates/server/src/observability/: mod.rs  sqlite.rs
crates/server/src/observability/sqlite/: mod.rs  query.rs  schema.rs
crates/server/src/pipeline/: mod.rs
crates/server/src/routes/: actions.rs  behavior.rs  config.rs  conversations.rs  execution.rs  extensions.rs  interfaces.rs  jobs.rs  journal.rs  logs.rs  memories.rs  memory.rs  mod.rs  observability.rs  permissions.rs  resources.rs  runtime.rs  schedules.rs  system_logs.rs
crates/server/src/system_log/: mod.rs  sqlite.rs
docs/: api-surface.md  architecture.md  config-model.md  data-model.md  extension-development.md  extension-runtime-rfc.md  hooks-and-events.md  i18n-and-theming.md  roadmap.md  runtime-layout.md  theme-contract.md
docs/development/: conventions.md
migrations/: 0001_ennoia_bootstrap.sql  0002_system_config.sql
packaging/home-template/config/: ennoia.toml  ui.toml
packaging/home-template/policies/: memory.toml  stage.toml
packaging/nginx/: default.conf
packaging/npm/: README.md  package.json
scripts/: bootstrap.mjs  build-extension-ui.mjs  build-workers.mjs  install-workspace.mjs  pack-npm.mjs  package-npm.mjs  panda-codegen.mjs  run-web-bin.mjs  web-build-shared.mjs
sdk/extension-sdk/: README.md  package.json
sdk/skill-sdk/: README.md  package.json
tests/e2e/: README.md  platform-smoke.mjs
tests/fixtures/: README.md
tests/helpers/: runtime-harness.mjs
tests/integration/: README.md  runtime-smoke.mjs
web/: README.md  eslint.config.js  index.html  package.json  panda.config.ts  tsconfig.json  vite.config.ts
web/apps/shell/: README.md  (+3 more)
web/builtins/: README.md  package.json
web/shell/: README.md  index.html  package.json  panda.config.ts  tsconfig.json
web/src/: App.tsx  main.tsx  router.tsx  styles.css
web/ui-sdk/: README.md  package.json
(+174 files in other folders)
