[workspace]
members = [
  "crates/assets",
  "crates/kernel",
  "crates/policy",
  "crates/extension-host",
  "crates/paths",
  "crates/observability",
  "crates/contract",
  "crates/server",
  "crates/cli",
  "builtins/extensions/memory/plugins/memory-service",
  "builtins/extensions/memory/worker",
  "builtins/extensions/conversation/plugins/conversation-service",
  "builtins/extensions/workflow/plugins/workflow-service",
  "builtins/extensions/workflow/worker",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"
authors = ["Ennoia"]
