[package]
name = "ennoia-auth"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ennoia-kernel = { path = "../kernel" }
argon2 = "0.5.3"
async-trait = "0.1.89"
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
jsonwebtoken = "9.3.1"
rand = "0.9.2"
sea-query = "0.32"
sea-query-binder = { version = "0.7", features = ["sqlx-sqlite"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite"] }
uuid = { version = "1.18.1", features = ["v4"] }

[lib]
path = "src/lib.rs"
