[package]
name = "ennoia-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ennoia-kernel = { path = "../kernel" }
ennoia-auth = { path = "../auth" }
ennoia-server = { path = "../server" }
serde_json = "1.0.149"
tokio = { version = "1.51.1", features = ["macros", "rt-multi-thread"] }
toml = "1.1.2"

[[bin]]
name = "ennoia"
path = "src/main.rs"
