[package]
name = "ennoia-contract"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
axum = "0.8.9"
ennoia-error-utils = { path = "../error-utils" }
ennoia-kernel = { path = "../kernel" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[lib]
path = "src/lib.rs"
