[package]
name = "ennoia-extension-host"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ennoia-kernel = { path = "../kernel" }
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
chrono = { version = "0.4.42", features = ["serde"] }

[lib]
path = "src/lib.rs"
