[package]
name = "ennoia-extension-host"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ennoia-kernel = { path = "../kernel" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
toml = "1.1.2"
chrono = { version = "0.4.42", features = ["serde"] }
wasmtime = { version = "39.0.1", features = ["cranelift"] }
anyhow = "1.0.100"

[dev-dependencies]
wat = "1.240.0"

[lib]
path = "src/lib.rs"
