[package]
name = "ennoia-kernel"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
async-trait = "0.1.89"
ennoia-error-utils = { path = "../error-utils" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

[dev-dependencies]
toml = "1.1.2"
