[package]
name = "ennoia-observability"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
http = "1.3.1"
serde = { version = "1.0.228", features = ["derive"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1.18.1", features = ["v4"] }

[lib]
path = "src/lib.rs"
