[package]
name = "ennoia-scheduler"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ennoia-kernel = { path = "../kernel" }
async-trait = "0.1.89"
chrono = { version = "0.4.42", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1.51.1", features = ["rt-multi-thread", "time", "sync", "macros"] }
uuid = { version = "1.18.1", features = ["v4"] }

[lib]
path = "src/lib.rs"
