[package]
name = "ennoia-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ennoia-kernel = { path = "../kernel" }
ennoia-policy = { path = "../policy" }
ennoia-memory = { path = "../memory" }
ennoia-runtime = { path = "../runtime" }
ennoia-orchestrator = { path = "../orchestrator" }
ennoia-scheduler = { path = "../scheduler" }
ennoia-extension-host = { path = "../extension-host" }
axum = "0.8.9"
chrono = { version = "0.4.42", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1.51.1", features = ["rt-multi-thread", "net", "sync", "macros"] }
toml = "1.1.2"
tower-http = { version = "0.6.8", features = ["cors"] }
uuid = { version = "1.18.1", features = ["v4"] }

[lib]
path = "src/lib.rs"
