[package]
name = "ennoia-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ennoia-assets = { path = "../assets" }
ennoia-kernel = { path = "../kernel" }
ennoia-extension-host = { path = "../extension-host" }
ennoia-paths = { path = "../paths" }
ennoia-observability = { path = "../observability" }
ennoia-contract = { path = "../contract" }
async-stream = "0.3.6"
arc-swap = "1.7.1"
axum = "0.8.9"
chrono = { version = "0.4.42", features = ["serde"] }
futures-core = "0.3.31"
rusqlite = { version = "0.32.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
mime_guess = "2.0.5"
tokio = { version = "1.51.1", features = ["rt-multi-thread", "net", "sync", "macros", "time", "process"] }
toml = "1.1.2"
tower = { version = "0.5.3", features = ["util"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tracing = "0.1.41"
uuid = { version = "1.18.1", features = ["v4"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[lib]
path = "src/lib.rs"
