[package]
name = "ennoia-workflow"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ennoia-contract = { path = "../../../../../crates/contract" }
ennoia-kernel = { path = "../../../../../crates/kernel" }
ennoia-paths = { path = "../../../../../crates/paths" }
ennoia-policy = { path = "../../../../../crates/policy" }
async-trait = "0.1.89"
axum = "0.8.9"
chrono = { version = "0.4.42", features = ["serde"] }
sea-query = "0.32"
sea-query-binder = { version = "0.7", features = ["sqlx-sqlite"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1.51.1", features = ["rt-multi-thread", "net", "macros"] }
toml = "1.1.2"
uuid = { version = "1.18.1", features = ["v4"] }

[lib]
path = "src/lib.rs"
